--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -22,6 +22,10 @@
   float: right;
 }
 
+.content--toggle-item-option:hover {
+    background-color: #FFFFFF !important;
+}
+
 .page-preTasks\.6 #controls--next-button {
   background-image: url("https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__beginarrow_right_1x.png")
 }
