--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -269,6 +269,15 @@ body {
   max-width: 800px;
 }
 
+.play-button-overlay {
+    background-image: url(https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__playbutton_1x.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.bi .bi-play-circle-fill {
+  display: none;
+}
 /* STOP HAND */
 #content > div > div > img {
   max-width: 50%;
