Remove redundant class selector for play circle icon

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -275,7 +275,7 @@ body {
     background-position: center;
 }
 
-.bi .bi-play-circle-fill {
+.bi-play-circle-fill {
   display: none;
 }
 /* STOP HAND */
