Hide video controls container in CSS

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -275,6 +275,10 @@ body {
     background-position: center;
 }
 
+.video-controls-container {
+  display: none;
+}
+
 .bi-play-circle-fill {
   display: none;
 }
