Adjust font sizes in NGAT_MDDG_POC.css
Updated font sizes for header and content items.

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -85,7 +85,8 @@ body {
 }
 
 #header--progress-panel {
-    font-size: 16pt;
+    font-size: 21px !important;
+    font-weight: 700;
     color: var(--header-text-color);
     font-style: normal;
 }
@@ -252,6 +253,11 @@ body {
   text-align: center;
 }
 
+/* Set all content in options to 18px font size */
+.content--toggle-item-inner > * {
+    font-size: 18px !important;
+}
+
 .content--toggle-item-option-indicator.radio{
   display: none;
 }
@@ -293,4 +299,13 @@ body {
 .page-instructions\.2\.0 > #content > div > div:nth-child(1) > img {
   max-width: 1200px;
   width: 100%;
+}
+
+/* Font Sizing */
+
+/* Demographics */
+.content--item-form-group label,
+.content--item-form-group input,
+.content--item-form-group label > * {
+    font-size: 18px !important;
 }
