Resize submit button and modify hover styles
Updated submit button dimensions and adjusted hover effects.

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -4,8 +4,8 @@
   --header-text-color: #221f1f;
   --button-width: 100px;
   --button-height: 77px;
-  --submit-button-width: 124px;
-  --submit-button-height: 88px;
+  --submit-button-width: 188px; /* larger submit button */
+  --submit-button-height: 136px; /* larger submit button */
   --hdr-pad-y: 16px;   /* header top */
   --hdr-pad-x: 10px;   /* left/right padding */
 }
@@ -22,10 +22,6 @@
   float: right;
 }
 
-.content--toggle-item-option:hover {
-    background-color: #FFFFFF !important;
-}
-
 .page-preTasks\.6 #controls--next-button {
   background-image: url("https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__beginarrow_right_1x.png")
 }
@@ -34,6 +30,10 @@
   background-image: url("https://cdn.mhs.com/mhsdocs/DataGathering/MDDG/submit-btn.svg");
   width: var(--submit-button-width);
   height: var(--submit-button-height);
+}
+
+.content--toggle-item-option:hover {
+    background-color: #FFFFFF !important;
 }
 
 .content--toggle-wrapper {
@@ -63,10 +63,6 @@
   position: relative;
 }
 
-.page-pause\.-1 .content--markup-text {
-    font-size: 21px !important;
-}
-
 .content--toggle-item-group .content--toggle-item-option {
   background-color: white;
   padding: 8px 8px !important;
@@ -89,10 +85,8 @@ body {
 }
 
 #header--progress-panel {
-    font-size: 21px !important;
-    font-weight: 700;
+    font-size: 16pt;
     color: var(--header-text-color);
-    font-style: normal;
 }
 
 
@@ -167,10 +161,10 @@ body {
 
 .page-review\.9 .btn-center-stack {
   align-items: center;
-  width: 75%;
+  width: 50%;
   top: 50%;
   left: 0;
-  transform: translate(15%, -50%);
+  transform: translate(50%, -50%);
   position: absolute;
 }
 
@@ -202,7 +196,7 @@ body {
 }
 
 .page-ending-complete\.11 .content--markup-text{
-  font-size: 21px;
+  font-size: 51px;
   font-weight: bold;
   color: var(--header-text-color);
 }
@@ -257,11 +251,6 @@ body {
   text-align: center;
 }
 
-/* Set all content in options to 18px font size */
-.content--toggle-item-inner > * {
-    font-size: 18px !important;
-}
-
 .content--toggle-item-option-indicator.radio{
   display: none;
 }
@@ -280,19 +269,6 @@ body {
   max-width: 800px;
 }
 
-.play-button-overlay {
-    background-image: url(https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__playbutton_1x.png);
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.video-controls-container {
-  display: none;
-}
-
-.bi-play-circle-fill {
-  display: none;
-}
 /* STOP HAND */
 #content > div > div > img {
   max-width: 50%;
@@ -303,13 +279,4 @@ body {
 .page-instructions\.2\.0 > #content > div > div:nth-child(1) > img {
   max-width: 1200px;
   width: 100%;
-}
-
-/* Font Sizing */
-
-/* Demographics */
-.content--item-form-group label,
-.content--item-form-group input,
-.content--item-form-group label > * {
-    font-size: 18px !important;
 }
