--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -22,6 +22,10 @@
   float: right;
 }
 
+.content--toggle-item-option:hover {
+    background-color: #FFFFFF !important;
+}
+
 .page-preTasks\.6 #controls--next-button {
   background-image: url("https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__beginarrow_right_1x.png")
 }
@@ -30,10 +34,6 @@
   background-image: url("https://cdn.mhs.com/mhsdocs/DataGathering/MDDG/submit-btn.svg");
   width: var(--submit-button-width);
   height: var(--submit-button-height);
-}
-
-.content--toggle-item-option:hover {
-    background-color: #FFFFFF !important;
 }
 
 .content--toggle-wrapper {
@@ -63,6 +63,10 @@
   position: relative;
 }
 
+.page-pause\.-1 .content--markup-text {
+    font-size: 21px !important;
+}
+
 .content--toggle-item-group .content--toggle-item-option {
   background-color: white;
   padding: 8px 8px !important;
@@ -85,8 +89,10 @@ body {
 }
 
 #header--progress-panel {
-    font-size: 16pt;
+    font-size: 21px !important;
+    font-weight: 700;
     color: var(--header-text-color);
+    font-style: normal;
 }
 
 
@@ -196,7 +202,7 @@ body {
 }
 
 .page-ending-complete\.11 .content--markup-text{
-  font-size: 51px;
+  font-size: 21px;
   font-weight: bold;
   color: var(--header-text-color);
 }
@@ -251,6 +257,11 @@ body {
   text-align: center;
 }
 
+/* Set all content in options to 18px font size */
+.content--toggle-item-inner > * {
+    font-size: 18px !important;
+}
+
 .content--toggle-item-option-indicator.radio{
   display: none;
 }
@@ -269,6 +280,19 @@ body {
   max-width: 800px;
 }
 
+.play-button-overlay {
+    background-image: url(https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__playbutton_1x.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.video-controls-container {
+  display: none;
+}
+
+.bi-play-circle-fill {
+  display: none;
+}
 /* STOP HAND */
 #content > div > div > img {
   max-width: 50%;
@@ -279,4 +303,13 @@ body {
 .page-instructions\.2\.0 > #content > div > div:nth-child(1) > img {
   max-width: 1200px;
   width: 100%;
+}
+
+/* Font Sizing */
+
+/* Demographics */
+.content--item-form-group label,
+.content--item-form-group input,
+.content--item-form-group label > * {
+    font-size: 18px !important;
 }
